@@ -32,6 +32,7 @@ Version 1.5.4+svn:
       lists (FR #7492) and wildcards.
     * Added a feature to draw hex coordinates and/or terrain code on every hex.
       Available in-game via :sc and :tc commands, and in editor2's menu.
+    * Make sure the attack indicator is never obscured by the terrain.
 
 Version 1.5.4:
   * Editor2
